[gd_scene load_steps=6 format=3 uid="uid://b7v476mpp1mce"]

[ext_resource type="Script" uid="uid://8rfv2yikgb3" path="res://scripts/enhanced_game_ui.gd" id="1_yubou"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yubou"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rns2u"]
bg_color = Color(0.019607844, 0.019607844, 0.019607844, 0.16470589)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u001w"]
bg_color = Color(0.019607844, 0.019607844, 0.019607844, 0.16470589)

[sub_resource type="Theme" id="Theme_u2dgd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_yubou")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -95.0
offset_right = 282.0
offset_bottom = -18.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_yubou")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Message" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7529412, 0.33333334, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸŽ² PÅ™Ã­praven..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiceControl" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 11.0
offset_right = 150.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="DiceProgress" type="ProgressBar" parent="DiceControl"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
allow_greater = true

[node name="RoundInfo" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -216.0
offset_top = 10.0
offset_right = -16.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rns2u")

[node name="VBox" type="VBoxContainer" parent="RoundInfo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="RoundBank" type="Label" parent="RoundInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.25490198, 1)
theme_override_font_sizes/font_size = 18
text = "ðŸ’° Banka: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvailableDice" type="Label" parent="RoundInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "ðŸŽ² Kostek: 6/6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Actions" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -108.0
offset_right = 206.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u001w")

[node name="HBox" type="HBoxContainer" parent="Actions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -34.0
offset_right = 129.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="BtnRoll" type="Button" parent="Actions/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = SubResource("Theme_u2dgd")
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 16
text = "ðŸŽ² Hodit"

[node name="BtnBank" type="Button" parent="Actions/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 16
text = "ðŸ’¾ UloÅ¾it"

[node name="BtnSelect" type="Button" parent="Actions/HBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_font_sizes/font_size = 16
text = "âœ… Vybrat"

[node name="PlayerInfo" type="Panel" parent="."]
custom_minimum_size = Vector2(250, 30)
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="PlayerInfo"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="TotalScore" type="Label" parent="PlayerInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2784314, 0.77254903, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Celkem: 0"
horizontal_alignment = 1
vertical_alignment = 1
